# mcp-grok

./: .gitignore  README.md  act.nix  config.json  default.nix  flake.nix  main.py  menu.py  menu_app.py  menu_core.py  menu_state.py  pyproject.toml  server.py  shell.nix
.github/: copilot-instructions.md
.github/instructions/: memory.instruction.md
.github/workflows/: python-package.yml
src/: config.py  file_tools.py  server.py  shell_manager.py
src/mcp_grok/: config.py  file_tools.py  mcp_grok_server.py  process_cleanup.py  project_manager.py  server.py  server_client.py  server_daemon.py  server_daemon_handler.py  server_info.py  shell_manager.py
src/menu/: menu.py  menu_app.py  menu_core.py  menu_state.py  proxy_manager.py
tests/: conftest.py  test_clear_logs.py  test_clear_mcp_log.py  test_log_clear.py  test_mcp.py  test_menu.py  test_menu_core.py  test_project_management.py  test_proxy_log_clear.py  test_proxy_log_error.py  test_read_basic.py  test_read_edge_cases.py  test_read_relative.py  test_read_tool.py  test_read_tool_relative.py  test_server_daemon.py  test_server_default_project.py  test_shell_edge_cases.py  test_shell_features.py  test_utils.py  test_write_basic.py  test_write_delete.py  test_write_edge_cases.py  test_write_insert_replace.py  test_write_relative.py  test_write_tool.py  test_write_tool_edge_nonexistent.py  test_write_tool_relative.py
tests/fixtures/: cleanup.py  daemon_manager.py  log_fixtures.py  process_monitor.py  process_utils.py  server_fixtures.py  test_leak_tracker.py  test_lifecycle.py
