[project]
name = "mcp-grok"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.25.0",
    "prompt-toolkit>=3.0.52",
    "pytest>=9.0.2",
]

[project.optional-dependencies]
typecheck = ["pyright"]
lint = ["flake8"]
test = ["requests"]
