[project]
name = "mcp-grok"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]",
    "prompt-toolkit",
    "pytest",
]

[project.scripts]
server = "server:main"
menu = "menu.menu:main"

[project.optional-dependencies]
typecheck = ["pyright"]
lint = ["flake8"]
test = ["requests"]

[tool.setuptools.packages.find]
where = ["src"]
