[project]
name = "mcp-grok"
version = "0.1.5"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]",
    "prompt-toolkit",

]

[project.scripts]
mcp-grok-server = "mcp_grok.mcp_grok_server:main"
mcp-grok-menu = "menu.menu:main"

[project.optional-dependencies]
typecheck = ["pyright"]
lint = ["flake8"]
test = ["pytest", "requests"]

[tool.setuptools.packages.find]
where = ["src"]
